<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnexionPage"
    tools:ignore="HardcodedText">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/entete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo_rond"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ploof"
                android:textColor="#ffffff"
                android:textSize="@dimen/_35ssp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/slogant"
                android:textColor="#ffffff"
                android:textSize="@dimen/_15ssp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <TextView
            android:id="@+id/txtViewConnexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_27sdp"
            android:text="@string/connexion"
            android:textColor="#000000"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/mail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:hint="E-mail"
                app:endIconDrawable="@drawable/ic_email"
                app:endIconMode="custom"
                app:placeholderText="exemple@ploof.com"
                app:placeholderTextColor="#a2b5bb">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/mot_de_passe"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passWrd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp">

                <TextView
                    android:id="@+id/txtViewPassOublie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:text="@string/mot_de_passe_oubli"
                    android:textColor="#1eb6c6"/>

                <Switch
                    android:id="@+id/chooseUserTypeC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:minHeight="48dp"
                    android:textColor="#808080"
                    android:text="Je suis plombier"
                    android:theme="@style/SwitchColor" />
            </LinearLayout>

            <Button
                android:id="@+id/btnConnecter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/contour_button"
                android:text="@string/se_connecter"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:orientation="horizontal">

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_3sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/creer_compte"
                android:textColor="#000000"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_3sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

        <Button
            android:id="@+id/btnInscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/contoure_button_outlined"
            android:text="@string/s_inscrire"
            android:textAllCaps="false"
            android:textColor="#1eb6c6"
            android:textSize="@dimen/_20ssp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>