<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:orientation="vertical"
    android:padding="4dp"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo_rond" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="Parce que l'eau est précieuse, je signale les fuites d'eaux"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            tools:ignore="MissingDefaultResource">

            <CheckBox
                android:id="@+id/checkBoxDomicile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:buttonTint="@color/white"
                android:minHeight="48dp"
                android:text="@string/fuite_d_eau_domicile"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,UnusedAttribute" />

            <CheckBox
                android:id="@+id/checkBoxHorsDomicile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:buttonTint="@color/white"
                android:minHeight="48dp"
                android:text="@string/fuite_d_eau_hors_domicile"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,UnusedAttribute" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>