<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionPage"
    tools:ignore="HardcodedText">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/entete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo_rond"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:paddingBottom="20dp"
                android:text="@string/msg_de_bienvenue"
                android:textColor="#ffffff"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/mainInscriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/frameLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <TextView
            android:id="@+id/txtViewConnexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="12dp"
            android:text="@string/inscription"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/mail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Nametitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/nom_et_prenoms"
                app:placeholderText="Ali Touré"
                app:placeholderTextColor="#a2b5bb">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/InscriptionNomPrenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:hint="E-mail"
                app:endIconDrawable="@drawable/ic_email"
                app:endIconMode="custom"
                app:placeholderText="exemple@ploof.com"
                app:placeholderTextColor="#a2b5bb">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mailInscription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/phoneNumber"
                app:endIconDrawable="@drawable/ic_phone"
                app:endIconMode="custom"
                app:placeholderText="05000000"
                app:placeholderTextColor="#a2b5bb">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inscriptionPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:inputType="phone"
                    android:maxLines="1"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSuivant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/contour_button"
                android:text="Suivant"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/passWrd_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/mot_de_passe"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passWrdInscription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passWrdTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/confirmer_le_mot_de_passe"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passWrdInscriptionConfirme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnInscrire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/contour_button"
                android:text="@string/s_inscrire"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>